[#19] fix : Todo Section 펼쳐진 경우에는 overflow hidden 해제하여 메뉴가 밖에서도 보이도록 설정

--- a/src/components/TodoContainer/TodoSection/style.scss
+++ b/src/components/TodoContainer/TodoSection/style.scss
@@ -40,8 +40,7 @@
   }
 
   .todo-container {
-    transition: ease-in-out 0.5s;
-    overflow-y: hidden;
+    transition: height ease-in-out 0.5s, opacity ease-in-out 0.5s;
 
     > div {
       display: grid;
